// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`builds component node through alt. constructor 1`] = `
Object {
  "child": [Function],
  "component": [Function],
  "id": "foo",
  "menuItemGroups": Array [],
  "menuItems": Array [],
  "options": Object {},
  "title": undefined,
  "type": "component",
}
`;

exports[`builds component node through constructor 1`] = `
Object {
  "child": [Function],
  "component": [Function],
  "id": "foo",
  "menuItemGroups": Array [],
  "menuItems": Array [],
  "options": Object {
    "foo": "bar",
  },
  "title": "some title",
  "type": "component",
}
`;

exports[`can construct using builder 1`] = `
Object {
  "child": [Function],
  "component": [Function],
  "id": "yeah",
  "menuItemGroups": Array [],
  "menuItems": Array [],
  "options": Object {
    "foo": "bar",
  },
  "title": "Yeah",
  "type": "component",
}
`;

exports[`can set menu item groups 1`] = `
Object {
  "child": undefined,
  "component": [Function],
  "id": "yeah",
  "menuItemGroups": Array [
    Object {
      "id": "old-school",
      "title": "Old-school",
    },
  ],
  "menuItems": Array [
    Object {
      "action": [Function],
      "group": "old-school",
      "title": "Print",
    },
  ],
  "options": Object {},
  "title": undefined,
  "type": "component",
}
`;

exports[`can set menu items 1`] = `
Object {
  "child": undefined,
  "component": [Function],
  "id": "yeah",
  "menuItemGroups": Array [],
  "menuItems": Array [
    Object {
      "action": [Function],
      "title": "Print",
    },
  ],
  "options": Object {},
  "title": undefined,
  "type": "component",
}
`;

exports[`can set menu items groups with builder 1`] = `
Object {
  "child": undefined,
  "component": [Function],
  "id": "yeah",
  "menuItemGroups": Array [
    Object {
      "id": "old-school",
      "title": "Old-school",
    },
  ],
  "menuItems": Array [
    Object {
      "action": [Function],
      "group": "old-school",
      "title": "Print",
    },
  ],
  "options": Object {},
  "title": undefined,
  "type": "component",
}
`;

exports[`can set menu items with builder 1`] = `
Object {
  "child": undefined,
  "component": [Function],
  "id": "yeah",
  "menuItemGroups": Array [],
  "menuItems": Array [
    Object {
      "action": [Function],
      "title": "Purge",
    },
  ],
  "options": Object {},
  "title": undefined,
  "type": "component",
}
`;
